@@ -1,6 +1,7 @@
 FROM maven:latest AS build
 WORKDIR /app
 ARG CONTAINER_PORT
+ENV MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED"
 COPY pom.xml /app
 RUN mvn dependency:resolve
 COPY . /app
